# SeismicSafetyItalia

./: .env  .replit  README.md  SUPABASE_SETUP.sql  TXT.txt  ai_analysis.py  ai_chat.py  app.py  bacheca_giorno.py  chat_pubblica.py  community.db  data_service.py  emergency_info.py  emergenza.py  emergenza_new.py  fallback_sismico.py  fallback_wrapper.py  forecast_service.py  forum.py  home.py  informazioni.py  meteo.py  meteo_ilmeteo.py  monitoraggio.py  monitoraggio_fallback.py  monitoraggio_final.py  monitoraggio_ingv.py  monitoraggio_updated.py  monitoraggio_updated_final.py  monitoraggio_usgs.py  monitoraggiol.py  multi_ai_service.py  orario.py  pyproject.toml  replit.md  requirements.txt  security.py  segnala_evento.py  seo_tools.py  sitemap.xml  (+6 more)
.replit-artifact/: artifact.toml
.streamlit/: config.toml
artifacts/sismo-campania/: .gitignore  ai_analysis.py  ai_chat.py  app.py  bacheca_giorno.py  data_service.py  emergency_info.py  emergenza.py  forum.py  index.html  ingv_monitor.py  ml_forecast_service.py  monitoraggio.py  monitoraggio_fallback.py  monitoraggio_final.py  monitoraggio_ingv.py  multi_ai_service.py  requirements.txt  robots.txt  translations_lib.py  utils.py  visualization.py  weather.py
artifacts/sismo-campania/data/: earthquake_cache.json
artifacts/sismo-campania/modules/: meteo.py  (+4 more)
attached_assets/: Pasted-Per-ricaricare-una-Postepay-Standard-o-Evolution-online_1777468278188.txt
data/: earthquake_cache.json
docs/: index.html
modules/: emergenza.py  monitoraggio.py  monitoring.py  servizi_locali.py
streamlit/: dark.css  style.css
