[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.43.2",
    "requests>=2.32.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "streamlit-player>=0.1.5",
    "scikit-learn>=1.6.1",
]
